<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeSorteado"
            android:id="@+id/selectedNameTxt"
            android:fontFamily="@font/bungee" android:textSize="30sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgLogo"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            app:srcCompat="@drawable/logo_4all" android:contentDescription="@string/todo"/>
    <Button
            android:text="@string/sortear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnSortear" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@android:style/Widget.Material.Light.Button.Toggle" android:background="@color/colorPrimary"
            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/addNameTxt"
            android:hint="@string/nome" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddName" android:autofillHints=""
            android:fontFamily="@font/convergence" android:textSize="18sp"/>
    <Button
            android:text="@string/adicionar"
            android:layout_width="213dp"
            android:layout_height="43dp"
            android:id="@+id/btnAddName" android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="220dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSortear"/>
    <TextView
            android:text="@string/nomeSorteadoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            android:fontFamily="monospace" android:textStyle="bold|italic" android:textAllCaps="true"
            android:textColor="@android:color/holo_green_dark"/>

</androidx.constraintlayout.widget.ConstraintLayout>